Update the image origin on preferred size change

Earlier image origin was computed for every paint. But with the new
model the image origin is updated only when needed and then cached.
However, a call to update the image origin was missing when a new image
was being set. To ensure such calls are not missed again, this change
updates the image origin whenever the preferred size changes thus making
things far less error prone.

Bug: 893456
Change-Id: Ib6836bca67604e47384d8ae032dfc01ba3367f59
Component: ImageView, Images, Icons
Reviewed-on: https://chromium-review.googlesource.com/c/1271784
Commit-Queue: Malay Keshav <malaykeshav@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598459}
Former-commit-id: 5b98be91d96f0b653bafce146c9d1f036a34b688